# Chaste

./: .autotools  .clang-format  .clang-tidy  .codecov.yml  .gitignore  .gitmodules  .project  .shannon_wang_puglisi_weber_bers_2004_model_updated_4d_hERG_IKs_INa_ICaL_1Hz_generator.arch.swp  CITATION.cff  CITATION.md  CITATION.txt  CMakeLists.txt  ChasteParameters.xml  ConfigureComponentTesting.cmake  Doxyfile  ImmersedBoundary.patch  LICENSE  README.md  README.txt  ReleaseVersion.txt  SConscript  SConstruct  altered_output.txt  archive_convert.sed  astylerc  c_flag_overrides.cmake  chaste-legacy.supp  chaste-lucid.supp  chaste.supp  chaste_codegen.txt  cxx_flag_overrides.cmake  debug.txt  debugp.pos  debugr.pos  direct.txt  mumps.txt  normal_err.txt  normal_output.txt  paper.md  readme  (+7 more)
cell_based/: CMakeLists.txt
cell_based/test/: CMakeLists.txt  ContinuousTestPack.txt  FailingTestPack.txt  ImmersedBoundaryTestPack.txt  NightlyTestPack.txt  ParallelTestPack.txt  ProductionTestPack.txt  ProfileTestPack.txt  UNUSED_ContinuousTestPack.txt  runcommandlinemeshtutorial.sh
cmake/third_party_libs/: CMakeLists.txt  ChasteThirdPartyLibs.cmake  PETScConfig.cmake.in  PETScConfigForChaste.cmake.in  petscconf.h.in
continuum_mechanics/: CMakeLists.txt
continuum_mechanics/test/: CMakeLists.txt  ContinuousTestPack.txt  NightlyTestPack.txt  ParallelTestPack.txt  ProfileTestPack.txt  TestAbstractContinuumMechanicsAssembler.hpp  TestCompressibleNonlinearElasticitySolver.hpp  TestContinuumMechanicsNeumannBcsAssembler.hpp  TestIncompressibleNonlinearElasticitySolver.hpp  TestIncompressibleNonlinearElasticitySolverLong.hpp  TestMaterialLaws.hpp  TestMoreMechanics.hpp  TestNonlinearElasticityTools.hpp  TestProblemDefinitions.hpp  TestSolvingElasticityProblemsTutorial.hpp  TestSolvingMoreElasticityProblemsTutorial.hpp  TestStokesFlowAssembler.hpp  TestStokesFlowSolver.hpp  TestStokesFlowSolverLong.hpp  TestVtkNonlinearElasticitySolutionWriter.hpp  ToyCompressibleMaterialLaw.hpp  UNUSED_ContinuousTestPack.txt
crypt/: CMakeLists.txt  SConscript
crypt/test/: CMakeLists.txt  ContinuousTestPack.txt  ExtraSimulationsTestPack.txt  NightlyTestPack.txt  ProductionTestPack.txt  ProfileTestPack.txt
global/: CMakeLists.txt  SConscript  runcommandlinetutorial.sh
global/src/: Boost156NormalDistribution.hpp  BoostFilesystem.hpp  ChasteBuildInfo_cmake.cpp.in  ChasteBuildRoot.hpp  ChasteMakeUnique.hpp  ChastePragmas.hpp  ChasteSyscalls.hpp  Citations.cpp  Citations.hpp  CommandLineArguments.cpp  CommandLineArguments.hpp  Debug.cpp  Debug.hpp  DoxygenMainPage.hpp  Exception.cpp  Exception.hpp  ExecutableSupport.cpp  ExecutableSupport.hpp  FileFinder.cpp  FileFinder.hpp  Filesystem.hpp  GetCurrentWorkingDirectory.cpp  GetCurrentWorkingDirectory.hpp  IncludeVtkPointLocator.hpp  IsNan.hpp  LogFile.cpp  LogFile.hpp  MathsCustomFunctions.cpp  MathsCustomFunctions.hpp  ObjectCommunicator.cpp  ObjectCommunicator.hpp  OutputDirectoryFifoQueue.cpp  OutputDirectoryFifoQueue.hpp  OutputFileHandler.cpp  OutputFileHandler.hpp  PosixPathFixer.cpp  PosixPathFixer.hpp  ProgressReporter.cpp  ProgressReporter.hpp  RandomNumberGenerator.cpp  (+10 more)
global/test/: CMakeLists.txt  ClassOfSimpleVariables.hpp  ContinuousTestPack.txt  DontTestExceptionHandling.hpp  ForTestArchiving.cpp  ForTestArchiving.hpp  ImmersedBoundaryTestPack.txt  NightlyTestPack.txt  ParallelTestPack.txt  ProductionTestPack.txt  TestArchiving.hpp  TestArchivingHelperClasses.hpp  TestCellBasedEventHandler.hpp  TestChasteBuildInfo.hpp  TestCitations.hpp  TestCommandLineArguementsTutorial.hpp  TestCommandLineArguments.hpp  TestCommandLineArgumentsTutorial.hpp  TestCpp11Features.hpp  TestCwd.hpp  TestDebug.hpp  TestDistributedVector.hpp  TestException.hpp  TestExecutableSupport.hpp  TestFileComparison.hpp  TestFileFinder.hpp  TestFloatingPointDivisionByZero.hpp  TestFloatingPointDivisionByZeroPetsc.hpp  TestGenericEventHandler.hpp  TestHeartEventHandler.hpp  TestHelloWorld.hpp  TestLogFile.hpp  TestMathsCustomFunctions.hpp  TestModernCppFeatures.hpp  TestNumericFileComparison.hpp  TestObjectCommunicator.hpp  TestOutputDirectoryFifoQueue.hpp  TestOutputFileHandler.hpp  TestPetscEvents.hpp  TestPetscSetup.hpp  (+10 more)
heart/: CMakeLists.txt  SConscript
heart/dynamic/: DynamicallyLoadableLr91.cpp  DynamicallyLoadableLr91.hpp  NotACellModel.cpp  luo_rudy_1991_dyn.cellml
heart/test/: BidomainFaceStimulusCellFactory.hpp  CMakeLists.txt  CodegenTestPack.txt  ContinuousTestPack.txt  FailingTestPack.txt  KspConvergenceTester.hpp  NightlyTestPack.txt  ParallelTestPack.txt  PerformanceTester.hpp  ProductionTestPack.txt  Profile3DPerformanceTestPack.txt  ProfileAssemblyTestPack.txt  ProfileTestPack.txt  PycmlTestPack.txt  Test1dFibreWithHeterogeneity.hpp  TestAbstractContractionCellFactory.hpp  TestAbstractPurkinjeCellFactory.hpp  TestAdaptiveTetrahedralMesh.hpp  TestCardiacSimulation.hpp  TestCardiacSimulationArchiver.hpp  TestCardiacSimulationNightly.hpp  TestCheckpointing.hpp  TestConductivityTensors.hpp  TestElectrodes.hpp  TestFibreReader.hpp  TestFibreWriter.hpp  TestHeartConfig.hpp  TestHeartFileFinder.hpp  TestHeartGeometryInformation.hpp  TestHeartRegionCodes.hpp  TestHeterogeneousConductivities.hpp  TestNeumannStimulus.hpp  TestOutputModifiers.hpp  TestPapillaryFibreCalculator.hpp  TestPapillaryFibreCalculatorLong.hpp  TestPlaneStimulusCellFactory.hpp  TestRestitutionStimuli.hpp  TestSsachse.hpp  TestStimulus.hpp  TestStimulusBoundaryCondition.hpp  (+3 more)
io/: CMakeLists.txt  SConscript
io/test/: CMakeLists.txt  ContinuousTestPack.txt  ParallelTestPack.txt  ProductionTestPack.txt  TestColumnDataReaderWriter.hpp  TestHdf5DataReader.hpp  TestHdf5DataWriter.hpp  TestParallelColumnDataReaderWriter.hpp  TestParallelWriterPerformance.hpp  TestSimpleDataWriter.hpp
linalg/: CMakeLists.txt  SConscript
linalg/src/: AbstractNonlinearSolver.hpp  FourthOrderTensor.hpp  LinearSystem.cpp  LinearSystem.hpp  PCBlockDiagonal.cpp  PCBlockDiagonal.hpp  (+17 more)
mesh/: CMakeLists.txt  SConscript
ode/: CMakeLists.txt  SConscript
pde/: CMakeLists.txt  SConscript
pychaste/: CMakeLists.txt
(+8019 files in other folders)
